--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -74,20 +74,21 @@
           <li id="menu1" class=""><a _href=""><i class="iconfont"></i>
             <cite>用户管理</cite><i class="iconfont nav_right"></i></a>
             <ul class="sub-menu" style="display: none;">
-              <li id="menu2"><a _href="/admin/users/userlist1">
+              <li id="menu1"><a _href="/admin/index">
                 <i class="iconfont"></i>
-								<cite>用户列表</cite></a></li>
-								<li id="menu2"><a _href="/admin/users/userlist2">
-									<i class="iconfont"></i>
-									<cite>用户列表2</cite></a></li>
-                <li id="menu3">
-                  <a _href="/admin/users/rolelist"><i class="iconfont"></i>
-                    <cite>角色管理</cite></a>
-                </li>
-								<li id="menu4">
-									<a _href="/admin/users/authlist"><i class="iconfont"></i>
-										<cite>权限管理</cite></a>
-								</li>
+								<cite>控制台</cite></a>
+							</li>
+							<li id="menu2"><a _href="/admin/users/userlist2">
+								<i class="iconfont"></i>
+								<cite>用户列表2</cite></a></li>
+							<li id="menu3">
+								<a _href="/admin/users/rolelist"><i class="iconfont"></i>
+									<cite>角色管理</cite></a>
+							</li>
+							<li id="menu4">
+								<a _href="/admin/users/authlist"><i class="iconfont"></i>
+									<cite>权限管理</cite></a>
+							</li>
 						</ul>
 				</li>
           <li id="menu8"><a _href="/admin/news/authlist">
